@@ -1,7 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-  - A new class for text parsing rules created Text::Parser::Parser (#17)
+  - A new class for text parsing rules created Text::Parser::Parser (#17).
+  - Import functions from String::Util, Scalar::Util, String::Util::Match, String::Util::Range, and String::Index.
+    These can be accessed inside the ExAWK string rules directly (#44)
   - Added new methods to Text::Parser called add_rule to create rules (#37), and clear_rules to delete rules (#40)
   - Rules support range shortcuts like ${3+} to mean a string formed by joining fields 3 to end of line (#39)
   - Added new method join_range available when auto_split => 1 (#38)
